[package]
name = "bevy_av1"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_log",
] }
bitstream-io = "4.5.0"
dav1d = "0.11.0"
yuv = "0.8.6"

[dev-dependencies]
bevy = "0.16.1"
