[package]
name = "bevy_av1"
description = "AV1 video decoder for Bevy"
version = "0.1.0"
edition = "2024"
keywords = ["bevy", "video", "av1"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rectalogic/bevy_av1"

[dependencies]
async-channel = "2.5.0"
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_log",
] }
bitstream-io = "4.5.0"
dav1d = "0.11.0"
yuv = "0.8.6"

[dev-dependencies]
bevy = "0.16.1"
rand = "0.9.2"
